Browser compatibility revised

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -57,9 +57,15 @@ p {
     position: relative;
 }
 
+#flavorBanner{
+    height: 100vh;
+ 
+}
+
 .SectionImageFruitContainer {
     z-index: 0;
     position: absolute;
+
 }
 
 .SectionImageContainer img {
