--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -58,7 +58,9 @@ p {
 }
 
 #flavorBanner{
-    height: 100vh;
+    width: 100%;
+  aspect-ratio: 6 / 9; /* Beispiel: 16:9 Verhältnis */
+  max-height: 100%; 
  
 }
 
@@ -125,6 +127,7 @@ p {
 
 
 .slide-in-left {
+    font-size: 1.5rem;
     opacity: 0;
     transform: translateX(-50%);
     animation: slideInLeft 0.8s forwards;
@@ -139,6 +142,7 @@ p {
 
 
 .slide-in-right {
+    font-size: 1.5rem;
     opacity: 0;
     transform: translateX(50%);
     animation: slideInRight 0.8s forwards;
@@ -203,6 +207,7 @@ p {
         transform: translateY(0);
     }
 }
+
 
 
 
